--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
       	<meta charset="utf-8">
-		<title>Watch Out Archives</title>
+		<title>WONA Archives</title>
 		<link rel="stylesheet" href="style.css" type="text/css">
       	<script type="text/javascript">
 			var _gaq = _gaq || [];
@@ -16,11 +16,13 @@
 	</head>
 	<body lang="en">
 		<div id="wrapper">
-			<h1>Watch Out News Agency Archives</h1>
+			<h1>WONA Archives</h1>
+			
 			<div id="helptext">
-				Hi. Perhaps you'd be interested in visiting the <a href="http://wona.co.in">WoNA Website</a>,<a href="http://wona.co.in/blog">Blog</a>, or their <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>. This page was designed by <a href="http://captnemo.in/about">Abhay Rana</a>, in case you were wondering... <br>
-				You may also be interested in <a href="http://planetaki.com/iitr">Planet IITR <a href="https://facebook.com/PlanetIITR">(FB)</a></a>, a single source for all blogs, articles, and news related to IITR campus.
+				Some header text - Links : <a href="http://wona.co.in/blog">Blog</a>, <a href="https://www.facebook.com/WatchOutNewsAgency">Facebook page</a>
 			</div>
+
+			<div class="wrap-grey">
 			<h2>2012</h2>
 			<div class="year">
 				<div class="issue">
@@ -137,6 +139,7 @@
 				</div>
 				<div class="cb"></div>
 			</div>
+		</div>
 		</div>
 	</body>
 </html>
